# json-eval

./: .clang-tidy  CMakeLists.txt  README.md  justfile
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  common.hpp  error.cpp  error.hpp  expected.hpp  parser_helper.cpp  parser_helper.hpp  token.hpp
src/jsonobject/: CMakeLists.txt  jsonobject.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/query_evaluator/: CMakeLists.txt  query_evaluator.cpp  query_evaluator.hpp
src/query_parser/: CMakeLists.txt  query.hpp  query_lexer.cpp  query_lexer.hpp  query_parser.cpp  query_parser.hpp  query_token.hpp
tests/: CMakeLists.txt  test1.cpp  test_shared.hpp  test_suite.cpp
tests/lexer_tests/: lexer_test.cpp
tests/parser_tests/: parser_test.cpp
tests/query/lexer/: query_lexer_test.cpp
tests/query/parser/: query_parser_test.cpp
